# CSC591_parallel_algorithms

./: .gitignore  CMakeLists.txt  main.cpp
include/: bfs.h  graph.h  performance.h
src/: bfs.cpp  graph.cpp  performance.cpp
